codepkg/objects/Partner__c.object
<CustomObject>
    <description>IC/Licensee Offices, Suppliers</description>
    <fields>
        <fullName>Allowed_Inventory_Types__c</fullName>
        <label>Allowed Inventory Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brands_Owned_or_Licensed__c</fullName>
        <label>Brands Owned or Licensed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Certifcate_Number__c</fullName>
        <label>Business Certifcate Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Year__c</fullName>
        <label>Capacity (Year)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cogs_Country__c</fullName>
        <label>Cogs Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America East Coast</fullName>
                </value>
                <value>
                    <fullName>America West Coast</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Benelux (Belgium, Netherland)</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Instore Agency AB</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Group_Name__c</fullName>
        <label>Company Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MAINETTI</fullName>
                </value>
                <value>
                    <fullName>STEPUP LICENSEE</fullName>
                </value>
                <value>
                    <fullName>AMERICAS LICENSEE</fullName>
                </value>
                <value>
                    <fullName>EUROPE LICENSEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Certificates_Available__c</fullName>
        <label>Compliance Certificates Available</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_By__c</fullName>
        <label>Contacted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <label>Country/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year1__c</fullName>
        <formula>YEAR( Form_Submission_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Form Submission Year</inlineHelpText>
        <label>Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                    <default>true</default>
                    <label>2018</label>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decathlon_Code__c</fullName>
        <label>Decathlon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Order_to_Company__c</fullName>
        <label>Default Order to Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia - Mainetti Australia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal Plastic Industries</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Mainetti (Bangladesh) PVT Ltd</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jin Jin</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jinjin (Cambodia) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Central Americas - H.B. Trim Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>China - Suzhou Mainetti Plastic Products Ltd</fullName>
                </value>
                <value>
                    <fullName>Egypt - Elkekhia Group Ltd</fullName>
                </value>
                <value>
                    <fullName>France - Roybier et Fils</fullName>
                </value>
                <value>
                    <fullName>France - Roybier Mainetti</fullName>
                    <isActive>false</isActive>
                    <label>France - Roybier Mainetti</label>
                </value>
                <value>
                    <fullName>Guatemala - H.B. International Trim , S.A</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Mainetti (HK) Ltd</fullName>
                </value>
                <value>
                    <fullName>India - Mainetti (India) Pvt Ltd</fullName>
                </value>
                <value>
                    <fullName>Indonesia - PT. Mainetti Packaging Solution</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti SpA</fullName>
                </value>
                <value>
                    <fullName>Korea - Mainetti Korea Co. Ltd</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
                <value>
                    <fullName>Morocco - Mainetti Smaco SA</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Netherlands - Mainetti BV</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pakistan - Mainetti Pakistan (Pvt) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Peru - Hangers Trading E.I.R.L.</fullName>
                </value>
                <value>
                    <fullName>Philippines - Lexan</fullName>
                </value>
                <value>
                    <fullName>Portugal - Mainetti Cabides, Lda</fullName>
                </value>
                <value>
                    <fullName>Romania - Mainetti Romania S.R.L.</fullName>
                </value>
                <value>
                    <fullName>Singapore - Mainetti SEA Pte Ltd</fullName>
                </value>
                <value>
                    <fullName>South China / Hong Kong - MainettiCare Health Technologies</fullName>
                </value>
                <value>
                    <fullName>Spain - Nueva Mainetti, S.A.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EU_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_of_JV_Licence_Agreement_Sub__c</fullName>
        <label>Expiry Date of JV/Licence Agreement/Sub-</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Ref_No__c</fullName>
        <inlineHelpText>External Reference Number</inlineHelpText>
        <label>External Ref No</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Factory_Country_1__c</fullName>
        <label>Factory Country 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Country_2__c</fullName>
        <label>Factory Country 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Country_3__c</fullName>
        <label>Factory Country 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Name1__c</fullName>
        <label>Factory Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Name_2__c</fullName>
        <label>Factory Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Name_3__c</fullName>
        <label>Factory Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Name_4__c</fullName>
        <label>Factory Name 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Number_of_Employees_1__c</fullName>
        <label>Factory Number of Employees 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Number_of_Employees_2__c</fullName>
        <label>Factory Number of Employees 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Number_of_Employees_3__c</fullName>
        <label>Factory Number of Employees 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Quality_Compliance_Certifica__c</fullName>
        <inlineHelpText>Certification such as: ISO9001, ISO22000, Sedex, FSC, RoHS etc</inlineHelpText>
        <label>Quality &amp; Compliance Certification1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Factory_Size__c</fullName>
        <label>Factory Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Form_Submission_Date__c</fullName>
        <label>Form Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoporation_date__c</fullName>
        <label>Incoporation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Injection_Machines_100T_199T__c</fullName>
        <label>Injection Machines: 100T - 199T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injection_Machines_200T_299T__c</fullName>
        <label>Injection Machines: 200T - 299T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injection_Machines_300T_399T__c</fullName>
        <label>Injection Machines: 300T - 399T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injection_Machines_500T__c</fullName>
        <label>Injection Machines: &gt; 500T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Injection_Machines_99T__c</fullName>
        <label>Injection Machines: &lt; 99T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_ERP_Branch_Code__c</fullName>
        <label>Local ERP Branch Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_ERP_Company_Code__c</fullName>
        <description>This field is use for Middleware integration between Salesforce and local ERP</description>
        <label>Local ERP Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainetti_Contact_Email_Address__c</fullName>
        <label>Mainetti Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainetti_Contact_Telephone__c</fullName>
        <label>Mainetti Contact Telephone #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainetti_Contacted_by__c</fullName>
        <label>Mainetti Contacted by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainline_Telephone_No__c</fullName>
        <label>Mainline Telephone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Managing_Director_Owner__c</fullName>
        <label>Managing Director/Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_1__c</fullName>
        <label>Market 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_2__c</fullName>
        <label>Market 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_3__c</fullName>
        <label>Market 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Year__c</fullName>
        <formula>YEAR( Form_Submission_Date__c ) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Machine__c</fullName>
        <label>No. of Machine</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Staff_Workers__c</fullName>
        <label>Number of Staff &amp; Workers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLE_Row_Id__c</fullName>
        <label>OLE Row Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Address_1__c</fullName>
        <label>Factory Address 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Address_2__c</fullName>
        <label>Factory Address 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Address_3__c</fullName>
        <label>Factory Address 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <label>Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_of_Main_Print_Ink_Used_1__c</fullName>
        <label>Origin of Main Print Ink Used 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_of_Main_Print_Ink_Used_2__c</fullName>
        <label>Origin of Main Print Ink Used 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_of_Main_Print_Ink_Used_3__c</fullName>
        <label>Origin of Main Print Ink Used 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_of_Main_Raw_Material_Used_1__c</fullName>
        <label>Origin of Main Raw Material Used 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_of_Main_Raw_Material_Used_2__c</fullName>
        <label>Origin of Main Raw Material Used 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_of_Main_Raw_Material_Used_3__c</fullName>
        <label>Origin of Main Raw Material Used 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Recommendation_del__c</fullName>
        <label>Overall Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Number__c</fullName>
        <description>{yyyy}{mm}-{0000}</description>
        <displayFormat>{yyyy}{mm}-{0000}</displayFormat>
        <label>Partner Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending on compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_in_Charge__c</fullName>
        <label>Person in Charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Location_1__c</fullName>
        <label>Plant Location 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plant_Location_2__c</fullName>
        <label>Plant Location 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plant_Location_3__c</fullName>
        <label>Plant Location 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Description__c</fullName>
        <label>Primary Category - Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Factory_Name__c</fullName>
        <label>Primary Category - Factory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Regional_Category__c</fullName>
        <label>Primary Category - Regional Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LABEL</fullName>
                    <color>#FF0000</color>
                    <label>LABEL</label>
                </value>
                <value>
                    <fullName>POLYBAG</fullName>
                    <color>#FF6600</color>
                    <label>POLYBAG</label>
                </value>
                <value>
                    <fullName>SHOPPING BAGS</fullName>
                    <color>#F3D904</color>
                    <label>SHOPPING BAGS</label>
                </value>
                <value>
                    <fullName>SUIT COVER</fullName>
                    <color>#33FF33</color>
                    <label>SUIT COVER</label>
                </value>
                <value>
                    <fullName>INTELLIGENT SOLUTION</fullName>
                    <color>#AFCADF</color>
                    <label>INTELLIGENT SOLUTION</label>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                    <color>#0B24BE</color>
                    <label>OTHERS</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <color>#000000</color>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Category_Sub_Category__c</fullName>
        <label>Primary Category - Sub-Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>This is used in Supplier Catalogue for the Product Category</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Materials</fullName>
                </value>
                <value>
                    <fullName>Capital Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Cyclical</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub__c</fullName>
        <inlineHelpText>this is use in supplier catalogue for the product sub-cat1</inlineHelpText>
        <label>Product Sub-cat</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chemical Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Chemicals – Plastics &amp; Rubber</fullName>
                </value>
                <value>
                    <fullName>Fabricated Plastic &amp; Rubber</fullName>
                </value>
                <value>
                    <fullName>Forestry &amp; Wood Products</fullName>
                </value>
                <value>
                    <fullName>Gold &amp; Silver</fullName>
                </value>
                <value>
                    <fullName>Iron &amp; Steel</fullName>
                </value>
                <value>
                    <fullName>Metal Mining</fullName>
                </value>
                <value>
                    <fullName>Misc. Fabricated Products</fullName>
                </value>
                <value>
                    <fullName>Paper &amp; Paper Products</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Constr. &amp; Agric. Machinery</fullName>
                </value>
                <value>
                    <fullName>Constr. – Supplies &amp; Fixtures</fullName>
                </value>
                <value>
                    <fullName>Construction – Raw Materials</fullName>
                </value>
                <value>
                    <fullName>Construction Services</fullName>
                </value>
                <value>
                    <fullName>Misc. Capital Goods</fullName>
                </value>
                <value>
                    <fullName>Apparel/Accessories</fullName>
                </value>
                <value>
                    <fullName>Appliance &amp; Tool</fullName>
                </value>
                <value>
                    <fullName>Audio &amp; Video Equipment</fullName>
                </value>
                <value>
                    <fullName>Auto &amp; Truck Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Auto &amp; Truck Parts</fullName>
                </value>
                <value>
                    <fullName>Footwear</fullName>
                </value>
                <value>
                    <fullName>Furniture &amp; Fixtures</fullName>
                </value>
                <value>
                    <fullName>Jewelry &amp; Silverware</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Recreational Products</fullName>
                </value>
                <value>
                    <fullName>Textiles – Non Apparel</fullName>
                </value>
                <value>
                    <fullName>Biotechnology &amp; Drugs</fullName>
                </value>
                <value>
                    <fullName>Healthcare Facilities</fullName>
                </value>
                <value>
                    <fullName>Major Drugs</fullName>
                </value>
                <value>
                    <fullName>Medical Equipment &amp; Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Shipping_Quantity_1_UOM__c</fullName>
        <label>Projected Shipping Quantity 1 UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kg</fullName>
                </value>
                <value>
                    <fullName>Pieces</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Shipping_Quantity_1__c</fullName>
        <label>Projected Shipping Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Shipping_Quantity_2_UOM__c</fullName>
        <label>Projected Shipping Quantity 2 UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Shipping_Quantity_2__c</fullName>
        <label>Projected Shipping Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Shipping_Quantity_3_UOM__c</fullName>
        <label>Projected Shipping Quantity 3 UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Shipping_Quantity_3__c</fullName>
        <label>Projected Shipping Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Province_State__c</fullName>
        <label>Province/State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Compliance_Certification2__c</fullName>
        <inlineHelpText>Certification such as: ISO9001, ISO22000, Sedex, FSC, RoHS etc</inlineHelpText>
        <label>Quality &amp; Compliance Certification2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Compliance_Certification3__c</fullName>
        <inlineHelpText>Certification such as: ISO9001, ISO22000, Sedex, FSC, RoHS etc</inlineHelpText>
        <label>Quality &amp; Compliance Certification3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Compliance_Certification4__c</fullName>
        <inlineHelpText>Certification such as: ISO9001, ISO22000, Sedex, FSC, RoHS etc</inlineHelpText>
        <label>Quality &amp; Compliance Certification4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Management_System_Used__c</fullName>
        <label>Quality Management System Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Partner_Code__c</fullName>
        <inlineHelpText>This code is used when RTS Inventory Manager upload RTS Inventory Transactions through Jitterbit Data Loader.</inlineHelpText>
        <label>RTS Partner Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recommendation_Remark__c</fullName>
        <label>Recommendation Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>INDIAN SUBCONTINENT</fullName>
                </value>
                <value>
                    <fullName>EUROPE</fullName>
                </value>
                <value>
                    <fullName>FAR EAST</fullName>
                </value>
                <value>
                    <fullName>MIDDLE EAST &amp; AFRICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_With_Supplier_1__c</fullName>
        <label>Relationship With Supplier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_With_Supplier_2__c</fullName>
        <label>Relationship With Supplier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_With_Supplier_3__c</fullName>
        <label>Relationship With Supplier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
</CustomObject>